# drf-crud

./: db.sqlite3  pyproject.toml
root/: settings.py  urls.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_member_first_name_remove_member_last_name_and_more.py
